src/main/java/com/example/gateway/global/error/exception/token/TokenValidException.java
package com.example.gateway.global.error.exception.token;

public class TokenValidException extends RuntimeException {
    public TokenValidException(String msg) {
        super(msg);
    }
}
